--- a/src/css/cssviewer.css
+++ b/src/css/cssviewer.css
@@ -54,7 +54,7 @@ span.CSSViewer_property,
 	text-align:center !important;
 	width:332px !important;
 	display:block !important; 
-	background:url("chrome-extension://__MSG_@@extension_id__/img/header.png") !important;
+	background:url("moz-extension://__MSG_@@extension_id__/img/header.png") !important;
 	padding:30px 0 10px 0 !important;
 	margin:5% auto;
 	overflow:hidden !important;
@@ -65,7 +65,7 @@ span.CSSViewer_property,
 {
 	padding:10px 32px 0 32px !important;
 	overflow:hidden !important;
-	background:url("chrome-extension://__MSG_@@extension_id__/img/body.png") repeat-y !important;
+	background:url("moz-extension://__MSG_@@extension_id__/img/body.png") repeat-y !important;
 }
 
 #CSSViewer_footer
@@ -76,12 +76,12 @@ span.CSSViewer_property,
 	width:332px !important;
 	height:30px !important;
 	display:block !important;
-	background:url("chrome-extension://__MSG_@@extension_id__/img/footer.png") !important;
+	background:url("moz-extension://__MSG_@@extension_id__/img/footer.png") !important;
 }
 
 .CSSViewer_category
 {
-	background:url("chrome-extension://__MSG_@@extension_id__/img/list.png") no-repeat top left !important;
+	background:url("moz-extension://__MSG_@@extension_id__/img/list.png") no-repeat top left !important;
 	padding:0 5px !important;
 }
 
@@ -103,7 +103,7 @@ span.CSSViewer_property,
 
 #CSSViewer_block li
 {
-	background:url("chrome-extension://__MSG_@@extension_id__/img/bullet.png") no-repeat left center !important;
+	background:url("moz-extension://__MSG_@@extension_id__/img/bullet.png") no-repeat left center !important;
 	padding-left:10px !important; 
 }
 
